--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dhorrigan/db-wrapper",
+    "name": "dhorrigan/capsule",
     "description": "A simple wrapper class for the Laravel Database package.  This is only to be used outside of a Laravel application.",
     "keywords": ["laravel", "database"],
     "authors": [
@@ -14,7 +14,7 @@
     },
     "autoload": {
         "psr-0": {
-            "DbWrapper": "lib/"
+            "Capsule": "lib/"
         }
     },
     "minimum-stability": "dev"
